# hard-brain-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  arm32v6.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/db/: README.md  crud.py  database.py  loader.py  models.py  schemas.py
src/quiz/: connection.py  questions.py
src/resources/: dataloader_script.py  song_data.json  song_data_omni.json
src/resources/songs/: README.md
tests/: test_main.py
