[tool.poetry]
name = "hard-brain"
version = "0.2.0"
description = "A service for song quizzes for Beatmania IIDX music."
authors = ["Your Name <you@example.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.10,<4.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26"}
httpx = "^0.26.0"
python-ffmpeg = "^2.0.10"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.16"
pydantic = "^2.7.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
python-dotenv = "^1.0.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
